{
  "sourceLanguage" : "en",
  "strings" : {
    "Camera" : {

    },
    "Cancel" : {

    },
    "Currency" : {

    },
    "Date" : {

    },
    "Delete" : {

    },
    "Description" : {

    },
    "Done" : {

    },
    "Enter description" : {

    },
    "Expense total value" : {

    },
    "Expenses Bot++" : {

    },
    "Generated" : {

    },
    "History" : {

    },
    "Home" : {

    },
    "id" : {

    },
    "Info" : {

    },
    "New Expense" : {

    },
    "Photo library" : {

    },
    "Select your image" : {

    },
    "Timestamp" : {

    },
    "Total" : {

    },
    "Total Expenses" : {

    },
    "Total value" : {

    }
  },
  "version" : "1.0"
}